<resources>
    <string name="app_name">Android_level_2</string>

    <!--    Old resources START     -->
    <string name="settings">Settings</string>
    <string name="log_out">Log out</string>
    <string name="name_text">Tkachenko Roman</string>
    <string name="profession_text">android course student</string>
    <string name="information_text">place for additional information</string>
    <string name="my_contacts_button_text">"""V i e w   m y   c o n t a c t s"""</string>
    <string name="edit_profile_button_text">Edit profile</string>
    <string name="bottom_message_text">Go to settings and fill out the profile</string>
    <string name="response_ok">All fine</string>
    <string name="response_wrong_email">Incorrect E-mail Address</string>
    <string name="unknown_user">Unknown User</string>
    <string name="AuthorizationButtonGoogleText" translatable="false">G O O G L E</string>
    <!--    Old resources END     -->

    <string name="tv_add_new_contact_text">Add contacts</string>
    <string name="tv_toolbar_add_contact_text">Add contact</string>
    <string name="tv_toolbar_contact_list_text">Contacts</string>

    <string name="tv_inscription_user_name_text">Username</string>
    <string name="tv_inscription_career_text">Career</string>
    <string name="tv_inscription_email_text">Email</string>
    <string name="tv_inscription_phone_text">Phone</string>
    <string name="tv_inscription_address_text">Address</string>
    <string name="tv_inscription_birthday_text">Date of birth</string>
    <string name="et_email_add_contact_hint">name@gmail.com</string>
    <string name="et_phone_add_contact_hint">(099)-456-78-90</string>
    <string name="et_birthday_add_contact_hint">12.05.1995</string>
    <string name="btn_save_user_data_text">S A V E</string>
    <string name="snackbar_button_text">RESTORE</string>
    <string name="toolbar_search_button_text">In developing...</string>
    <string name="custom_google_button_text">Implementation in progress</string>


</resources>